# iconographic-priming

./: .gitignore  PAPER.md  PAPER_CRITIQUES.md  README.md  pyproject.toml
data/images/: manifest.json
results/four_arm/: reference_rates.md
results/runs/20260428_192221Z/: claude-opus-4-6__courage__ratio__baseline.jsonl  claude-opus-4-6__justice__ratio__baseline.jsonl  claude-opus-4-6__prudence__ratio__baseline.jsonl  claude-opus-4-6__temperance__ratio__baseline.jsonl  config.json  gpt-5.4__courage__ratio__baseline.jsonl  gpt-5.4__justice__ratio__baseline.jsonl  gpt-5.4__prudence__ratio__baseline.jsonl  gpt-5.4__temperance__ratio__baseline.jsonl  summary.json
results/runs/20260428_194406Z/: claude-opus-4-6__courage__ratio__sacred.jsonl  claude-opus-4-6__justice__ratio__sacred.jsonl  claude-opus-4-6__prudence__ratio__sacred.jsonl  claude-opus-4-6__temperance__ratio__sacred.jsonl  config.json  gpt-5.4__courage__ratio__sacred.jsonl  gpt-5.4__justice__ratio__sacred.jsonl  gpt-5.4__prudence__ratio__sacred.jsonl  gpt-5.4__temperance__ratio__sacred.jsonl  summary.json
results/runs/20260428_205406Z/: claude-opus-4-6__courage__ratio__neutral.jsonl  claude-opus-4-6__justice__ratio__neutral.jsonl  claude-opus-4-6__prudence__ratio__neutral.jsonl  claude-opus-4-6__temperance__ratio__neutral.jsonl  config.json  gpt-5.4__courage__ratio__neutral.jsonl  summary.json  (+3 more)
scripts/: 00_setup.sh  01_run_paper.sh  02_analyze_paper.sh  fetch_images.py  make_blank_gray.py
src/iconographic_priming/: __init__.py  analyze.py  cache.py  four_arm.py  images.py  run_experiment.py  runner.py
(+12 files in other folders)
